# pymodaq_plugins_thorlabs

./: .gitignore  README.rst  plugin_info.py  plugin_info.toml  pyproject.toml  setup.py
.github/workflows/: Testbase.yml  python-publish.yml  updater.yml
pymodaq_plugins_thorlabs/: version.py
pymodaq_plugins_thorlabs/daq_move_plugins/: daq_move_Kinesis.py
pymodaq_plugins_thorlabs/daq_viewer_plugins/plugins_0D/: daq_0Dviewer_Kinesis_KPA101.py
pymodaq_plugins_thorlabs/daq_viewer_plugins/plugins_2D/: daq_2Dviewer_Thorlabs_DCx.py
src/pymodaq_plugins_thorlabs/: __init__.py  utils.py
src/pymodaq_plugins_thorlabs/daq_move_plugins/: daq_move_BrushlessDCMotor.py  daq_move_DCServoKCube.py  daq_move_DCServoTCube.py  daq_move_Elliptec.py  daq_move_ElliptecPyMeasure.py  daq_move_K10CR1.py  daq_move_KDC101.py  daq_move_KIM101.py  daq_move_KPZ101.py  daq_move_Kinesis.py  daq_move_KinesisFlipper.py  daq_move_KinesisIntegratedStepper.py  daq_move_Kinesis_Flipper.py  daq_move_Kinesis_KDC101.py  daq_move_MFF101_pylablib.py  daq_move_PRM1Z8_pylablib.py  daq_move_kpz101.py
src/pymodaq_plugins_thorlabs/daq_viewer_plugins/plugins_0D/: daq_0Dviewer_Kinesis_KPA101.py  daq_0Dviewer_TLPMPowermeter.py  daq_0Dviewer_TLPMPowermeterInst.py  daq_0Dviewer_ThorlabsPowermeter.py  daq_0Dviewer_powercam.py
src/pymodaq_plugins_thorlabs/daq_viewer_plugins/plugins_1D/: daq_1Dviewer_CCSXXX.py
src/pymodaq_plugins_thorlabs/daq_viewer_plugins/plugins_2D/: daq_2Dviewer_Thorlabs_DCx.py  daq_2Dviewer_Thorlabs_TSI.py  daq_2Dviewer_Thorlabs_TSIWaiting.py  daq_2Dviewer_UC480.py
src/pymodaq_plugins_thorlabs/hardware/: camera_base.py  ccsxxx.py  daq_move_servocube_abstract.py  kinesis.py  powercam.py  powermeter.py
src/pymodaq_plugins_thorlabs/resources/: config_template.toml
