[features]  # defines the plugin features contained into this plugin
instruments = true  # true if plugin contains instrument classes (else false, notice the lowercase for toml files)
extensions = false  # true if plugins contains dashboard extensions
models = false  # true if plugins contains pid models
h5exporters = false  # true if plugin contains custom h5 file exporters
scanners = false  # true if plugin contains custom scan layout (daq_scan extensions)

[urls]
package-url = 'https://github.com/PyMoDAQ/pymodaq_plugins_thorlabs'

[project]
name = "pymodaq_plugins_thorlabs"
description = 'Set of PyMoDAQ plugins for instruments from Thorlabs (Kinesis K10CR1 (stepper rotation actuator), Kinesis Flipper, Kinesis KSP100, DCx camera...)'

dependencies = [
    "pythonnet",
    "pywin32",
    "nicelib",
    "instrumental-lib",
    "pylablib==1.4.1",
    'pymodaq>=4.4.0',
    'opencv-python',
    'elliptec',
    'pymodaq_utils',
]

authors = [
    {name = "Sébastien Weber", email = "sebastien.weber@cemes.fr"},
    #todo: list here all authors of your plugin
]
maintainers = [
    {name = "Sébastien Weber", email = "sebastien.weber@cemes.fr"},
    #todo: list here all maintainers of your plugin
]

# nottodo: leave everything below as is!

dynamic = ["version", "urls", "entry-points"]
readme = "README.rst"
license = { file="LICENSE" }
requires-python = ">=3.8"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]

[build-system]
requires = [
    "hatchling>=1.9.0",
    "hatch-vcs", "toml",
    "pymodaq_utils>=0.0.6",
]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.custom]

[tool.hatch.version]
source = "vcs"

